--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <nav>
-            <a href="Humasa_website.html" class="logo">HUMÅSA</a>
+            <a href="#" class="logo">HUMÅSA</a>
             <div class="nav-links">
               <ul>
                 <li><a href="#">OM</a></li>
@@ -23,12 +23,12 @@
     </header>
 
     <main>
-        <section class="project-section" style="background-image: url(../website/IMG/Mockup\ \(6\).jpg)">
+        <section class="project-section" style="background-image: url(/IMG/Mockup\ \(6\).jpg)">
             <div class="overlay"></div>
             <div class="project-content">
                 <h2>CLEAN CHOICE</h2>
                 <h6>Ett nationellt täckande arbete med logistiska utmaningar i form av planering, teknik, och kontakt med verksamheter och dess personer.</h6>
-                <a href="Project_One.html" class="read-more-btn"><span>Läs Mer</span></a>
+                <a href="#" class="read-more-btn"><span>Läs Mer</span></a>
             </div>
         </section>
     </main>
@@ -37,6 +37,6 @@
         <span class="copy">HUMÅSA © 2025 │ Org.nr 559403-9165</span>
     </footer>
 
-    <script src="../Hemsida/JS/main.js" type="module"></script>
+    <script src="/JS/main.js" type="module"></script>
 </body>
 </html>
