Added project pg 2
Lagt till projekt 2 - dels för att testa skroll

--- a/index.html
+++ b/index.html
@@ -27,6 +27,15 @@
             <div class="overlay"></div>
             <div class="project-content">
                 <h2>CLEAN CHOICE</h2>
+                <h6>När målet är perfektion</h6>
+                <a href="#" class="read-more-btn"><span>Läs Mer</span></a>
+            </div>
+        </section>
+
+        <section class="project-section" style="background-image: url(/IMG/DSC_1836.JPG)">
+            <div class="overlay"></div>
+            <div class="project-content">
+                <h2>STOCKWIK DEKALER</h2>
                 <h6>Ett nationellt täckande arbete med logistiska utmaningar i form av planering, teknik, och kontakt med verksamheter och dess personer.</h6>
                 <a href="#" class="read-more-btn"><span>Läs Mer</span></a>
             </div>
