Touch ups + about pg
Lägger till about sida - uppdateringar för sidan kommer.

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 <body>
     <header>
         <nav>
-            <a href="#" class="logo">HUMÅSA</a>
+            <a href="index.html" class="logo">HUMÅSA</a>
             <div class="nav-links">
               <ul>
-                <li><a href="#">OM</a></li>
-                <li><a href="#" id="scrollLink">KONTAKT</a></li>
+                <li><a href="about.html">OM</a></li>
+                <li><a href="about.html#contact" id="scrollLink">KONTAKT</a></li>
               </ul>
             </div>
         </nav>
