--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About</title>
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="CSS/style.css">
 </head>
 
 
@@ -93,7 +93,7 @@
         <span class="copy">HUMÅSA © 2025 │ Org.nr 559403-9165</span>
     </footer>
 
-    <script src=""></script>
+    <script src="/JS/main.js" type="module"></script>
     
 </body>
 </html>
