--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
             <div class="nav-links">
               <ul>
                 <li><a href="about.html">OM</a></li>
-                <li><a href="about.html#contact" id="scrollLink">KONTAKT</a></li>
+                <li><a href="about.html#Contact" id="scrollLink">KONTAKT</a></li>
               </ul>
             </div>
         </nav>
