Small fixes/misses
Små fixar jag missade.

--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
     </header>
 
     <main>
-        <section class="about-hero" style="background-image: url(../Bilder/DSC_1548.JPG)"></section>
+        <section class="about-hero" style="background-image: url(/IMG/DSC_1836.JPG)"></section>
 
         <section class="about">
 
@@ -87,7 +87,7 @@
                         <p>hmsandreasson@gmail.com</p>
                     </div>
                 </div>
-                
+
                 <div class="profile-image">
                     <img src="../Bilder/DSC_2306crop.png" alt="Mårten Andreasson">
                 </div>                
