About hero fixes & updates
Vill jag bygga about page som komponent eller allt i _about.css?

Inte bestämt men lutar mot att bara köra allt på sidans css.

--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
         </nav>
     </header>
 
-    <main>
+    <main class="main-about">
         <section class="about-hero" style="background-image: url(/IMG/DSC_1836.JPG)"></section>
 
         <section class="about">
