added form + more css
Lagt till en komponent för form -. css ska flyttas runt senare.

--- a/about.html
+++ b/about.html
@@ -75,7 +75,7 @@
                             <label for="meddelande">Hej, skriv ditt meddelande här</label>
                         </div>
             
-                        <button type="submit" class="submitButton"><span>Skicka</span></button>
+                        <button type="submit" class="submit-button"><span>Skicka</span></button>
                     </form>
                 </div>
             
