--- a/about.html
+++ b/about.html
@@ -89,7 +89,7 @@
                 </div>
 
                 <div class="profile-image">
-                    <img src="../Bilder/DSC_2306crop.png" alt="Mårten Andreasson">
+                    <img src="/IMG/DSC_2306crop.png" alt="Mårten Andreasson">
                 </div>                
             </div>
         </section>
