About structure changes.
Saknar fortfarande live server så testar lite grejer direkt till main.. :P

--- a/about.html
+++ b/about.html
@@ -29,27 +29,33 @@
 
         <section class="about">
 
-            <div class="about-header">
-                <h1>Förvandla dina affärsutmaningar till framgångsrika möjligheter med Humåsas skräddarsydda konsulttjänster<span>.</span></h1>
+            <div class="about-header-container">
+                <div class="about-header-empty"></div>
+                <div class="about-header">
+                    <h1>Förvandla dina affärsutmaningar till framgångsrika möjligheter med Humåsas skräddarsydda konsulttjänster<span>.</span></h1>
+                </div>
             </div>
 
-            <div class="about-content">
-                <p>
-                    Humåsa är ett konsultföretag som drivs av Mårten Andreasson. 
-                    Humåsa specialiserar sig på att erbjuda skräddarsydda tjänster inom en rad olika områden, 
-                    från specifika hantverkstjänster till webbutveckling och design. 
-                    Humåsa’s målsättning är att vid varje arbete leverera personligt anpassade lösningar med 
-                    högkvalitativa resultat utifrån vår kunds behov. Med Humåsa’s fokus på innovation och kreativitet, 
-                    siktar vi på att leverera unika lösningar som verkligen möter våra kunders behov. </p>
-                    ​
-                <p> Humåsa ser varje uppdrag som en möjlighet att bevisa sin kompetens och skapa långvariga relationer 
-                    med sina kunder. Genom att arbeta med Humåsa får du direkt kontakt med en driven och engagerad 
-                    andra part som hjälper dig att nå fram till den bästa lösningen just för dig. Vi värdesätter 
-                    varje kundrelation som ett långsiktigt partnerskap. Genom öppen och kontinuerlig kommunikation 
-                    lyssnar vi på dina behov, ger råd och strävar alltid efter att bygga starka och förtroendefulla relationer.</p>
-                    ​
-                <p>Humåsa är mer än bara ett företag – det är din partner för att nå dina mål på ett unikt och effektivt sätt.
-                </p>
+            <div class="about-content-container">
+                <div class="about-content-empty"></div>
+                <div class="about-content">
+                    <p>
+                        Humåsa är ett konsultföretag som drivs av Mårten Andreasson. 
+                        Humåsa specialiserar sig på att erbjuda skräddarsydda tjänster inom en rad olika områden, 
+                        från specifika hantverkstjänster till webbutveckling och design. 
+                        Humåsa’s målsättning är att vid varje arbete leverera personligt anpassade lösningar med 
+                        högkvalitativa resultat utifrån vår kunds behov. Med Humåsa’s fokus på innovation och kreativitet, 
+                        siktar vi på att leverera unika lösningar som verkligen möter våra kunders behov. </p>
+                        ​
+                    <p> Humåsa ser varje uppdrag som en möjlighet att bevisa sin kompetens och skapa långvariga relationer 
+                        med sina kunder. Genom att arbeta med Humåsa får du direkt kontakt med en driven och engagerad 
+                        andra part som hjälper dig att nå fram till den bästa lösningen just för dig. Vi värdesätter 
+                        varje kundrelation som ett långsiktigt partnerskap. Genom öppen och kontinuerlig kommunikation 
+                        lyssnar vi på dina behov, ger råd och strävar alltid efter att bygga starka och förtroendefulla relationer.</p>
+                        ​
+                    <p>Humåsa är mer än bara ett företag – det är din partner för att nå dina mål på ett unikt och effektivt sätt.
+                    </p>
+                </div>
             </div>
         </section>
 
