Small updates to _about.css

--- a/about.html
+++ b/about.html
@@ -53,8 +53,8 @@
                         varje kundrelation som ett långsiktigt partnerskap. Genom öppen och kontinuerlig kommunikation 
                         lyssnar vi på dina behov, ger råd och strävar alltid efter att bygga starka och förtroendefulla relationer.</p>
                         ​
-                    <p>Humåsa är mer än bara ett företag – det är din partner för att nå dina mål på ett unikt och effektivt sätt.
-                    </p>
+                    <p><i>Humåsa är mer än bara ett konsultföretag – det är din partner för att nå dina mål på ett unikt och effektivt sätt.
+                    </i></p>
                 </div>
             </div>
         </section>
