Smooth scroll & more
Blandat uppdateringar + ny bild för about.

--- a/about.html
+++ b/about.html
@@ -18,14 +18,14 @@
             <div class="nav-links">
               <ul>
                 <li><a href="about.html">OM</a></li>
-                <li><a href="about.html#Contact" id="scrollLink">KONTAKT</a></li>
+                <li><a href="about.html#contact" id="scrollLink">KONTAKT</a></li>
               </ul>
             </div>
         </nav>
     </header>
 
     <main class="main-about">
-        <section class="about-hero" style="background-image: url(/IMG/DSC_1836.JPG)"></section>
+        <section class="about-hero" style="background-image: url(/IMG/DSC_1548.jpg)"></section>
 
         <section class="about">
 
