--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div class="project-content">
                 <h2>CLEAN CHOICE</h2>
                 <h6>När målet är perfektion</h6>
-                <a href="#" class="read-more-btn"><span>Läs Mer</span></a>
+                <a href="cleanchoice.html" class="read-more-btn"><span>Läs Mer</span></a>
             </div>
         </section>
 
