1st component for cc

--- a/cleanchoice.html
+++ b/cleanchoice.html
@@ -23,9 +23,9 @@
         </nav>
     </header>
 
-    <section class="section-one">
-        <div class="one-background"></div>
-        <div class="one-header">
+    <section class="hero">
+        <div class="hero-background"></div>
+        <div class="hero-header">
             <h1>Lorem Ipsum</h1>
             <p>Lorem ipsum cogito ergo delico ben</p>
         </div>
@@ -213,6 +213,6 @@
         <span class="copy">HUMÅSA © 2025 │ Org.nr 559403-9165</span>
     </footer>
 
-    <script src="JS/main.js"></script>
+    <script src="JS/main.js" type="module"></script>
 </body>
 </html>
