--- a/cleanchoice.html
+++ b/cleanchoice.html
@@ -26,8 +26,8 @@
     <section class="hero">
         <div class="hero-background"></div>
         <div class="hero-header">
-            <h1>Lorem Ipsum</h1>
-            <p>Lorem ipsum cogito ergo delico ben</p>
+            <h1>Clean Choice</h1>
+            <p>När målet är perfektion.</p>
         </div>
     </section>
 
