IMG & non finalized css for CC

--- a/cleanchoice.html
+++ b/cleanchoice.html
@@ -33,7 +33,7 @@
 
     <section class="section-two">
         <div class="two-background">
-            <img src="../Bilder/Mockup (21).jpg" alt="Test" class="two-background-image">
+            <img src="/IMG/Mockup (21).jpg" alt="Test" class="two-background-image">
         </div>
         <div class="two-text-container">
             <div class="two-text">
@@ -50,7 +50,7 @@
     <section class="section-three">
         <div class="three-grid">
             <div class="three-grid-1">
-                <img src="../Bilder/Mockup (2).jpg" alt="Clean Choice Hemsida" class="three-grid-image">
+                <img src="/IMG/Mockup (22).jpg" alt="Clean Choice Hemsida" class="three-grid-image">
             </div>
             <div class="three-grid-2">
                 <div class="three-text-container-1">
@@ -63,7 +63,7 @@
                 </div>
             </div>
             <div class="three-grid-3">
-                <img src="../Bilder/Mockup (21).jpg" alt="Clean Choice Hemsida" class="three-grid-image">
+                <img src="/IMG/Mockup (23).jpg" alt="Clean Choice Hemsida" class="three-grid-image">
             </div>
             <div class="three-grid-4">
                 <div class="three-text-container-2">
@@ -80,7 +80,7 @@
 
     <section class="section-four">
         <div class="four-content"></div>
-        <img src="../Bilder/Mockup (25).jpg" alt="Parallax image" class="four-parallax-image">
+        <img src="/IMG/Mockup (25).jpg" alt="Parallax image" class="four-parallax-image">
         <div class="four-content"></div>
     </section>
 
@@ -89,13 +89,13 @@
             <div class="five-gallery">
                 <div class="five-gallery-container">
                     <div class="gallery-item active">
-                        <img src="../Bilder/DSC_1698.JPG" alt="Clean Choice Landnignssida">
+                        <img src="/IMG/Mockup.jpg" alt="Clean Choice Landnignssida">
                     </div>
                     <div class="gallery-item">
-                        <img src="../Bilder/DSC_1886.jpg" alt="Clean Choice Kontakt">
+                        <img src="/IMG/Mockup (2).jpg" alt="Clean Choice Kontakt">
                     </div>
                     <div class="gallery-item">
-                        <img src="../Bilder/DSC_1810.JPG" alt="Clean Choice Tjänster">
+                        <img src="/IMG/Mockup (1).jpg" alt="Clean Choice Tjänster">
                     </div>
                 </div>
                 <div class="five-gallery-controls">
@@ -158,13 +158,13 @@
 
     <section class="section-seven">
         <div class="seven-content"></div>
-        <img src="../Bilder/Mockup (6).jpg" alt="Parallax image 2" class="seven-parallax-image">
+        <img src="/IMG/Top View Grid.jpg" alt="Parallax image 2" class="seven-parallax-image">
         <div class="seven-content"></div>
     </section>
 
     <section class="section-eight">
         <div class="eight-background">
-            <img src="../Bilder/Mockup (21).jpg" alt="Test" class="eight-background-image">
+            <img src="/IMG/Mockup (16).jpg" alt="Test" class="eight-background-image">
         </div>
         <div class="eight-text-container">
             <div class="eight-text">
@@ -181,7 +181,7 @@
     <section class="section-nine">
         <div class="nine-grid">
             <div class="nine-grid-1">
-                <img src="../Bilder/Mockup (2).jpg" alt="Clean Choice Hemsida" class="nine-grid-image">
+                <img src="/IMG/Mockup (28)_edited.jpg" alt="Clean Choice Hemsida" class="nine-grid-image">
             </div>
             <div class="nine-grid-2">
                 <div class="nine-text-container-1">
@@ -194,7 +194,7 @@
                 </div>
             </div>
             <div class="nine-grid-3">
-                <img src="../Bilder/Mockup (21).jpg" alt="Clean Choice Hemsida" class="nine-grid-image">
+                <img src="/IMG/grey_flower.jpg" alt="Clean Choice Hemsida" class="nine-grid-image">
             </div>
             <div class="nine-grid-4">
                 <div class="nine-text-container-2">
