--- a/cleanchoice.html
+++ b/cleanchoice.html
@@ -78,10 +78,10 @@
         </div>
     </section>
 
-    <section class="section-four">
-        <div class="four-content"></div>
-        <img src="/IMG/Mockup (25).jpg" alt="Parallax image" class="four-parallax-image">
-        <div class="four-content"></div>
+    <section class="parallax">
+        <div class="parallax-margin"></div>
+        <img src="/IMG/Mockup (25).jpg" alt="Parallax image" class="parallax-image">
+        <div class="parallax-margin"></div>
     </section>
 
     <section class="section-five">
