--- a/cleanchoice.html
+++ b/cleanchoice.html
@@ -156,10 +156,10 @@
         </div>
     </section>
 
-    <section class="section-seven">
-        <div class="seven-content"></div>
-        <img src="/IMG/Top View Grid.jpg" alt="Parallax image 2" class="seven-parallax-image">
-        <div class="seven-content"></div>
+    <section class="parallax">
+        <div class="parallax-margin"></div>
+        <img src="/IMG/Top View Grid.jpg" alt="Parallax image 2" class="parallax-image">
+        <div class="parallax-margin"></div>
     </section>
 
     <section class="section-eight">
