--- a/cleanchoice.html
+++ b/cleanchoice.html
@@ -214,5 +214,6 @@
     </footer>
 
     <script src="JS/main.js" type="module"></script>
+    <script src="JS/gallery.js"></script>
 </body>
 </html>
