Added 2 projects to home

--- a/index.html
+++ b/index.html
@@ -40,6 +40,24 @@
                 <a href="#" class="read-more-btn"><span>Läs Mer</span></a>
             </div>
         </section>
+
+        <section class="project-section" style="background-image: url()">
+            <div class="overlay"></div>
+            <div class="project-content">
+                <h2>BOKNINGSSYSTEM</h2>
+                <h6>Ett bokningssystem för delade arbetsytor. En effektivare och smidigare arbetsplats.</h6>
+                <a href="cleanchoice.html" class="read-more-btn"><span>Läs Mer</span></a>
+            </div>
+        </section>
+
+        <section class="project-section" style="background-image: url()">
+            <div class="overlay"></div>
+            <div class="project-content">
+                <h2>TAHULET ED TARHA</h2>
+                <h6>Kärlek till Azawakh världen över</h6>
+                <a href="cleanchoice.html" class="read-more-btn"><span>Läs Mer</span></a>
+            </div>
+        </section>
     </main>
 
     <footer>
