--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             </div>
         </section>
 
-        <section class="project-section" style="background-image: url()">
+        <section class="project-section" style="background-image: url(/IMG/bokningsskärmar.jpg)">
             <div class="overlay"></div>
             <div class="project-content">
                 <h2>BOKNINGSSYSTEM</h2>
@@ -50,7 +50,7 @@
             </div>
         </section>
 
-        <section class="project-section" style="background-image: url()">
+        <section class="project-section" style="background-image: url(/IMG/tahuletedtarha.jpg)">
             <div class="overlay"></div>
             <div class="project-content">
                 <h2>TAHULET ED TARHA</h2>
