--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <div class="project-content">
                 <h2>BOKNINGSSYSTEM</h2>
                 <h6>Ett bokningssystem för delade arbetsytor. En effektivare och smidigare arbetsplats.</h6>
-                <a href="cleanchoice.html" class="read-more-btn"><span>Läs Mer</span></a>
+                <a href="#" class="read-more-btn"><span>Läs Mer</span></a>
             </div>
         </section>
 
@@ -55,7 +55,7 @@
             <div class="project-content">
                 <h2>TAHULET ED TARHA</h2>
                 <h6>Kärlek till Azawakh världen över</h6>
-                <a href="cleanchoice.html" class="read-more-btn"><span>Läs Mer</span></a>
+                <a href="#" class="read-more-btn"><span>Läs Mer</span></a>
             </div>
         </section>
     </main>
