--- a/cleanchoice.html
+++ b/cleanchoice.html
@@ -24,7 +24,7 @@
     </header>
 
     <section class="hero">
-        <div class="hero-background"></div>
+        <div class="hero-background" style="background-image: url(/IMG/Mockup\ \(18\).jpg)"></div>
         <div class="hero-header">
             <h1>Clean Choice</h1>
             <p>När målet är perfektion.</p>
