New JS integration

--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
         <span class="copy">HUMÅSA © 2025 │ Org.nr 559403-9165</span>
     </footer>
 
-    <script src="/JS/main.js" type="module"></script>
+    <script src="/JS/main.js"></script>
+    <script src="/JS/button.js"></script>
 </body>
 </html>
