--- a/cleanchoice.html
+++ b/cleanchoice.html
@@ -213,7 +213,7 @@
         <span class="copy">HUMÅSA © 2025 │ Org.nr 559403-9165</span>
     </footer>
 
-    <script src="JS/main.js" type="module"></script>
+    <script src="JS/main.js"></script>
     <script src="JS/gallery.js"></script>
 </body>
 </html>
