Added STWK page
Lagt till STWK sida. Kod kommer.

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <div class="project-content">
                 <h2>STOCKWIK DEKALER</h2>
                 <h6>Ett nationellt täckande arbete med logistiska utmaningar i form av planering, teknik, och kontakt med verksamheter och dess personer.</h6>
-                <a href="#" class="read-more-btn"><span>Läs Mer</span></a>
+                <a href="stockwik.html" class="read-more-btn"><span>Läs Mer</span></a>
             </div>
         </section>
 
