STWK page updates
Work in Progress

--- a/stockwik.html
+++ b/stockwik.html
@@ -25,31 +25,32 @@
     <section class="hero">
         <div class="hero-background" style="background-image: url(/IMG/DSC_1836.JPG)"></div>
         <div class="hero-header">
-            <h1>Stockwik</h1>
-            <p>Guldkant på tillvaron.</p>
+            <h1>Guldkant på tillvaron.</h1>
+            <p>Ett arbete för investmentbolaget Stockwik.</p>
         </div>
     </section>
 
     <section class="section-one">
         <div class="one-container">
-            <div class="one-container__image-div">
-                <img src="../Bilder/DSC_1748.JPG" alt="" class="swhablaba">
+            <div class="one-container-image">
+                <img src="/IMG/grey_flower.jpg" alt="" class="one-container-image__image">
             </div>
-            <div class="one-container__text">
+
+            <div class="one-container-content">
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque id diam et ligula auctor pretium pharetra et est. Phasellus tempor odio velit, vitae eleifend ex consequat quis. Vestibulum sit amet leo ante. Fusce vel ante non nisi pulvinar faucibus eu ut ante. Aliquam vel ultrices dolor, in venenatis leo. Nam efficitur luctus nisi. Aliquam lacinia nisi et dui molestie, sit amet elementum mi ullamcorper. Pellentesque sit amet varius enim, nec vestibulum risus. Sed sollicitudin sollicitudin ligula. Donec in tincidunt est. Etiam nec purus eget eros placerat feugiat. Mauris dictum condimentum lorem, a vehicula magna vehicula nec. Phasellus scelerisque enim ut consectetur vehicula. Nullam facilisis laoreet orci eu pellentesque. Vestibulum consectetur odio at elit ornare aliquam.
+                    Stockwik är ett svenskt investmentbolag med 24 företag spridda på olika platser runt om i Sverige. Med en växande bolagsportfölj och en ambition om att skapa en tydligare samhörighet blev målet att foliera alla företagsbilar med en guldkant.
                     <br>
                     <br>
-                    Etiam facilisis velit nisi, in facilisis risus tincidunt scelerisque. Donec in imperdiet dui. Donec mattis magna nec ultricies dictum. Mauris iaculis augue at malesuada dictum. Duis a maximus arcu. Fusce ac convallis arcu. Cras tempor sapien ipsum, at consectetur tellus convallis nec. Nulla tristique, elit sed suscipit blandit, lorem erat sodales arcu, et volutpat diam dui non dolor. Nulla tincidunt dolor dapibus tincidunt rutrum. Ut feugiat nulla quis lorem scelerisque imperdiet.
+                    Som koncern med runt 400 anställda och över 100 företagsbilar på olika platser runt om i Sverige, visade det sig vara en stor logistisk utmaning för hur alla bilar på ett effektivt och noggrant sätt skulle folieras. Alternativ som att varje företagsbil skulle köras till en specifik verkstad för att folieras var både ineffektivt och kostsamt.
                     <br>
                     <br>
-                    Integer urna lacus, vestibulum ut faucibus tristique, vehicula in nulla. Nunc eu elit eros. Integer posuere posuere neque at varius. Suspendisse tincidunt vulputate enim, hendrerit ultricies mi condimentum in. In dui lectus, faucibus nec tempus vel, gravida vitae odio. Phasellus sit amet auctor sem. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris sed tortor at diam molestie placerat eget sed urna.
+                    Humåsa kunde erbjuda en lösning där en person, efter en utbildning i montering av dekaler kunde åka runt till alla företag och foliera varje bil. Lösningen kunde både garantera ett kvalitativt resultat och var mer kosteffektiv än andra alternativ.
                 </p>
             </div>
         </div>
     </section>
 
-    
+
     <footer>
         <span class="copy">HUMÅSA © 2025 │ Org.nr 559403-9165</span>
     </footer>
