STWK update again
w.i.p

--- a/stockwik.html
+++ b/stockwik.html
@@ -33,7 +33,7 @@
     <section class="section-one">
         <div class="one-container">
             <div class="one-container-image">
-                <img src="/IMG/grey_flower.jpg" alt="" class="one-container-image__image">
+                <img src="/IMG/stwk1.jpeg" alt="" class="one-container-image__image">
             </div>
 
             <div class="one-container-content">
@@ -42,7 +42,13 @@
                 <p>Humåsa kunde erbjuda en lösning där en person, efter en utbildning i montering av dekaler kunde åka runt till alla företag och foliera varje bil. Lösningen kunde både garantera ett kvalitativt resultat och var mer kosteffektiv än andra alternativ.</p>
             </div>
         </div>
+
+        <div class="image2">
+            <img src="/IMG/stwk2.jpg" alt="">
+        </div>
     </section>
+
+
 
     <div class="empty"></div>
 
