--- a/stockwik.html
+++ b/stockwik.html
@@ -59,6 +59,47 @@
         </div>
     </section>
 
+    <div class="s-container">
+        <div class="s-header">
+            <h1>Stockholm</h1>
+        </div>
+
+        <div class="s-gallery">
+            <div class="s-gallery-container">
+                <div class="gallery-item active">
+                    <img src="/IMG/DSC_1836.JPG" alt="">
+                </div>
+                <div class="gallery-item">
+                    <img src="/IMG/DSC_1548.jpg" alt="">
+                </div>
+                <div class="gallery-item">
+                    <img src="/IMG/grey_flower.jpg" alt="">
+                </div>
+            </div>
+            <div class="five-gallery-controls">
+                <button class="five-gallery-prev">
+                    <svg class="five-slideshow-arrow" viewBox="0 0 26 40" style="transform: scaleX(-1) scale(0.3125);">
+                        <g transform="translate(-35, -28)" fill-rule="evenodd">
+                            <polygon points="60.4571429 47.8 40.6571429 67.6 35 61.9428571 49.1433951 47.7994621 35 33.6571429 40.6571429 28"></polygon>
+                        </g>
+                    </svg>
+                </button>
+                <button class="five-gallery-next">
+                    <svg class="five-slideshow-arrow" viewBox="0 0 26 40" style="transform: scale(0.3125);">
+                        <g transform="translate(-35, -28)" fill-rule="evenodd">
+                            <polygon points="60.4571429 47.8 40.6571429 67.6 35 61.9428571 49.1433951 47.7994621 35 33.6571429 40.6571429 28"></polygon>
+                        </g>
+                    </svg>
+                </button>
+            </div>
+            <div class="five-gallery-dots">
+                <div class="gallery-dot active" data-index="0"></div>
+                <div class="gallery-dot" data-index="1"></div>
+                <div class="gallery-dot" data-index="2"></div>
+            </div>
+        </div>
+    </div>
+
 
 
     <div class="empty"></div>
@@ -69,6 +110,7 @@
     </footer>
 
     <script src="JS/main.js"></script>
+    <script src="JS/gallery.js"></script>
     
 </body>
     <!-- ska lägga in hero component
