--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </header>
 
     <main>
-        <section class="project-section" style="background-image: url(/IMG/Mockup\ \(6\).jpg)">
+        <section class="project-section" style="background-image: url(/IMG/CC-frontpage3.jpg)"> <!--Mockup 6 prev-->
             <div class="overlay"></div>
             <div class="project-content">
                 <h2>CLEAN CHOICE</h2>
