Gallery demo for STWK
added gallery functionality

--- a/stockwik.html
+++ b/stockwik.html
@@ -242,7 +242,7 @@
     </footer>
 
     <script src="JS/main.js"></script>
-    <script src="JS/gallery.js"></script>
+    <script src="JS/gallery2demo.js"></script>
     
 </body>
     <!-- ska lägga in hero component
