--- a/stockwik.html
+++ b/stockwik.html
@@ -113,7 +113,7 @@
         </div>
     </div>
 
-    <div class="s-container">
+    <div class="s-container" id="stockholm">
         <div class="s-header">
             <h2>Stockholm</h2>
         </div>
@@ -154,7 +154,7 @@
         </div>
     </div>
 
-    <div class="s-container">
+    <div class="s-container" id="gbg">
         <div class="s-header">
             <h2>Göteborg</h2>
         </div>
@@ -195,7 +195,7 @@
         </div>
     </div>
 
-    <div class="s-container">
+    <div class="s-container" id="malmo">
         <div class="s-header">
             <h2>Sundsvall</h2>
         </div>
