--- a/stockwik.html
+++ b/stockwik.html
@@ -243,6 +243,7 @@
 
     <script src="JS/main.js"></script>
     <script src="JS/gallery2demo.js"></script>
+    <script src="JS/sparkle.js"></script>
     
 </body>
     <!-- ska lägga in hero component
