--- a/stockwik.html
+++ b/stockwik.html
@@ -203,13 +203,16 @@
         <div class="s-gallery">
             <div class="s-gallery-container">
                 <div class="gallery-item active">
-                    <img src="/IMG/DSC_1836.JPG" alt="">
+                    <img src="/IMG/DSC_1548.jpg" alt="">
                 </div>
                 <div class="gallery-item">
                     <img src="/IMG/DSC_1548.jpg" alt="">
                 </div>
                 <div class="gallery-item">
                     <img src="/IMG/grey_flower.jpg" alt="">
+                </div>
+                <div class="gallery-item">
+                    <img src="/IMG/Mockup (2).jpg" alt="">
                 </div>
             </div>
             <div class="five-gallery-controls">
@@ -232,6 +235,7 @@
                 <div class="gallery-dot active" data-index="0"></div>
                 <div class="gallery-dot" data-index="1"></div>
                 <div class="gallery-dot" data-index="2"></div>
+                <div class="gallery-dot" data-index="3"></div>
             </div>
         </div>
     </div>
