URL script file
STWK felstavning

--- a/stockwik.html
+++ b/stockwik.html
@@ -202,7 +202,7 @@
         </div>
     </div>
 
-    <div class="s-container" id="malmo">
+    <div class="s-container" id="malmö">
         <div class="s-header">
             <h2>Sundsvall</h2>
         </div>
