--- a/stockwik.html
+++ b/stockwik.html
@@ -111,9 +111,16 @@
                 </a>
 
                 <!-- Färila -->
-                <a href="#färila" class="poi" style="top: 53%; left: 46%; --delay: 6;">
+                <a href="#färila" class="poi" style="top: 53%; left: 46%; --delay: 7;">
                     <div class="tooltip">
                         <h3>Färila</h3>
+                    </div>
+                </a>
+
+                <!-- Bollnäs -->
+                <a href="#bollnäs" class="poi" style="top: 56%; left: 48%; --delay: 8;">
+                    <div class="tooltip">
+                        <h3>Bollnäs</h3>
                     </div>
                 </a>
             </div>
@@ -202,7 +209,7 @@
         </div>
     </div>
 
-    <div class="s-container" id="malmö">
+    <div class="s-container" id="sundsvall">
         <div class="s-header">
             <h2>Sundsvall</h2>
         </div>
@@ -247,6 +254,47 @@
         </div>
     </div>
 
+    <div class="s-container" id="örebro">
+        <div class="s-header">
+            <h2>Örebro</h2>
+        </div>
+
+        <div class="s-gallery">
+            <div class="s-gallery-container">
+                <div class="gallery-item active">
+                    <img src="/IMG/DSC_1836.JPG" alt="">
+                </div>
+            </div>
+        </div>
+    </div>
+    
+    <div class="s-container" id="malmö">
+        <div class="s-header">
+            <h2>Örebro</h2>
+        </div>
+
+        <div class="s-gallery">
+            <div class="s-gallery-container">
+                <div class="gallery-item active">
+                    <img src="/IMG/DSC_1836.JPG" alt="">
+                </div>
+            </div>
+        </div>
+    </div>
+    
+    <div class="s-container" id="uppsala">
+        <div class="s-header">
+            <h2>Örebro</h2>
+        </div>
+
+        <div class="s-gallery">
+            <div class="s-gallery-container">
+                <div class="gallery-item active">
+                    <img src="/IMG/DSC_1836.JPG" alt="">
+                </div>
+            </div>
+        </div>
+    </div>
 
     <footer>
         <span class="copy">HUMÅSA © 2025 │ Org.nr 559403-9165</span>
