--- a/stockwik.html
+++ b/stockwik.html
@@ -217,16 +217,16 @@
         <div class="s-gallery">
             <div class="s-gallery-container">
                 <div class="gallery-item active">
-                    <img src="/IMG/DSC_1548.jpg" alt="">
+                    <img src="/IMG/STWK5.jpg" alt="">
                 </div>
                 <div class="gallery-item">
-                    <img src="/IMG/DSC_1548.jpg" alt="">
+                    <img src="/IMG/STWK6.jpg" alt="">
                 </div>
                 <div class="gallery-item">
-                    <img src="/IMG/grey_flower.jpg" alt="">
+                    <img src="/IMG/STWK7.jpg" alt="">
                 </div>
                 <div class="gallery-item">
-                    <img src="/IMG/Mockup (2).jpg" alt="">
+                    <img src="/IMG/STWK8.jpg" alt="">
                 </div>
             </div>
             <div class="five-gallery-controls">
@@ -276,7 +276,7 @@
         <div class="s-gallery">
             <div class="s-gallery-container">
                 <div class="gallery-item active">
-                    <img src="/IMG/DSC_1836.JPG" alt="">
+                    <img src="/IMG/STWK8.jpg" alt="">
                 </div>
             </div>
         </div>
