--- a/stockwik.html
+++ b/stockwik.html
@@ -62,7 +62,7 @@
                 <img src="/IMG/MAP_STWK_SWEDEN.png" alt="Map of Sweden" class="map-content-image">
                 
                 <!-- Stockholm -->
-                <a href="#stockholm" class="poi" style="top: 66%; left: 54%; --delay: 0;">
+                <a href="#stockholm" data-index="2" class="poi" style="top: 66%; left: 54%; --delay: 0;">
                     <div class="tooltip">
                         <h3>Stockholm</h3>
                     </div>
@@ -134,13 +134,13 @@
 
         <div class="s-gallery">
             <div class="s-gallery-container">
-                <div class="gallery-item active">
+                <div class="gallery-item active" data-index="0">
                     <img src="/IMG/DSC_1836.JPG" alt="">
                 </div>
-                <div class="gallery-item">
+                <div class="gallery-item" data-index="1">
                     <img src="/IMG/DSC_1548.jpg" alt="">
                 </div>
-                <div class="gallery-item">
+                <div class="gallery-item" data-index="2">
                     <img src="/IMG/grey_flower.jpg" alt="">
                 </div>
             </div>
