--- a/stockwik.html
+++ b/stockwik.html
@@ -134,7 +134,7 @@
 
         <div class="s-gallery">
             <div class="s-gallery-container">
-                <div class="gallery-item active" data-index="0">
+                <div class="gallery-item" data-index="0">
                     <img src="/IMG/DSC_1836.JPG" alt="">
                 </div>
                 <div class="gallery-item" data-index="1">
