--- a/stockwik.html
+++ b/stockwik.html
@@ -62,7 +62,7 @@
                 <img src="/IMG/MAP_STWK_SWEDEN.png" alt="Map of Sweden" class="map-content-image">
                 
                 <!-- Stockholm -->
-                <a href="#stockholm" data-index="2" class="poi" style="top: 66%; left: 54%; --delay: 0;">
+                <a href="#stockholm" data-slide-index="2" class="poi" style="top: 66%; left: 54%; --delay: 0;">
                     <div class="tooltip">
                         <h3>Stockholm</h3>
                     </div>
@@ -301,7 +301,7 @@
     </footer>
 
     <script src="JS/main.js"></script>
-    <script src="JS/gallery2demo.js"></script>
+    <script src="JS/gallery3demo.js"></script>
     <script src="JS/sparkle.js"></script>
     <script src="JS/url2.js"></script>
     
