Added booking page

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <div class="project-content">
                 <h2>BOKNINGSSYSTEM</h2>
                 <h6>Ett bokningssystem för delade arbetsytor. En effektivare och smidigare arbetsplats.</h6>
-                <a href="#" class="read-more-btn"><span>Läs Mer</span></a>
+                <a href="booking.html" class="read-more-btn"><span>Läs Mer</span></a>
             </div>
         </section>
 
