--- a/booking.html
+++ b/booking.html
@@ -22,6 +22,14 @@
         </nav>
     </header>
 
+    <section class="hero">
+        <div class="hero-background" style="background-image: url(/IMG/DSC_1836.JPG)"></div>
+        <div class="hero-header">
+            <h1>Bokningssystem med Humly.</h1>
+            <p>Inköp, installation samt upprätthållning av ett bokningssystem från humly.</p>
+        </div>
+    </section>
+
 
 
     <script src="/JS/main.js"></script>
