STWK BOOKING update

--- a/booking.html
+++ b/booking.html
@@ -23,7 +23,7 @@
     </header>
 
     <section class="hero">
-        <div class="hero-background" style="background-image: url(/IMG/DSC_1836.JPG)"></div>
+        <div class="hero-background" style="background-image: url(/IMG/STWKBOKNING1.jpg)"></div>
         <div class="hero-header">
             <h1>Bokningssystem med Humly.</h1>
             <p>Inköp, installation samt upprätthållning av ett bokningssystem från humly.</p>
