--- a/booking.html
+++ b/booking.html
@@ -30,6 +30,24 @@
         </div>
     </section>
 
+    <section class="section-one">
+        <div class="one-container">
+            <div class="one-container-image">
+                <img src="/IMG/stwk1.jpeg" alt="" class="one-container-image__image">
+            </div>
+
+            <div class="one-container-content">
+                <p>Stockwik är ett svenskt investmentbolag med 24 företag spridda på olika platser runt om i Sverige. Med en växande bolagsportfölj och en ambition om att skapa en tydligare samhörighet blev målet att foliera alla företagsbilar med en guldkant.</p>
+                <p>Som koncern med runt 400 anställda och över 100 företagsbilar på olika platser runt om i Sverige, visade det sig vara en stor logistisk utmaning för hur alla bilar på ett effektivt och noggrant sätt skulle folieras. Alternativ som att varje företagsbil skulle köras till en specifik verkstad för att folieras var både ineffektivt och kostsamt.</p>
+                <p>Humåsa kunde erbjuda en lösning där en person, efter en utbildning i montering av dekaler kunde åka runt till alla företag och foliera varje bil. Lösningen kunde både garantera ett kvalitativt resultat och var mer kosteffektiv än andra alternativ.</p>
+            </div>
+        </div>
+
+        <div class="image2">
+            <img src="/IMG/stwk2.jpg" alt="">
+        </div>
+    </section>
+
 
 
     <script src="/JS/main.js"></script>
