--- a/booking.html
+++ b/booking.html
@@ -33,7 +33,7 @@
     <section class="section-one">
         <div class="one-container">
             <div class="one-container-image">
-                <img src="/IMG/stwk1.jpeg" alt="" class="one-container-image__image">
+                <img src="/IMG/STWKBOOKING3.jpg" alt="" class="one-container-image__image">
             </div>
 
             <div class="one-container-content">
