--- a/booking.html
+++ b/booking.html
@@ -43,9 +43,9 @@
             </div>
         </div>
 
-        <div class="one1-container">
-            <div class="one1-container-image">
-                <img src="/IMG/STWKBOOKING4.png" alt="" class="one1-container-image__image">
+        <div class="one-container" id="part2">
+            <div class="one-container-image">
+                <img src="/IMG/STWKBOOKING4.png" alt="" class="one-container-image__image">
             </div>
 
             <div class="one1-container-content">
