--- a/booking.html
+++ b/booking.html
@@ -43,7 +43,7 @@
             </div>
         </div>
 
-        <div class="one-container-1">
+        <div class="one-container two">
             <div class="one-container-image">
                 <img src="/IMG/STWKBOOKING4.png" alt="" class="one-container-image__image">
             </div>
