--- a/booking.html
+++ b/booking.html
@@ -55,6 +55,10 @@
             </div>
         </div>
 
+        <div class="image2">
+            <img src="/IMG/STWKBOOKING7.jpg" alt="">
+        </div>
+
     </section>
 
 
