--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div class="project-content">
                 <h2>CLEAN CHOICE</h2>
                 <h6>När målet är perfektion</h6>
-                <a href="cleanchoice.html" class="read-more-btn"><span>Läs Nu</span></a>
+                <a href="cleanchoice.html" class="read-more-btn"><span>Upptäck mer</span></a>
             </div>
         </section>
 
@@ -37,7 +37,7 @@
             <div class="project-content">
                 <h2>STOCKWIK DEKALER</h2>
                 <h6>Ett nationellt täckande arbete med logistiska utmaningar i form av planering, teknik, och kontakt med verksamheter och dess personer.</h6>
-                <a href="stockwik.html" class="read-more-btn"><span>Läs Nu</span></a>
+                <a href="stockwik.html" class="read-more-btn"><span>Upptäck mer</span></a>
             </div>
         </section>
 
@@ -46,7 +46,7 @@
             <div class="project-content">
                 <h2>BOKNINGSSYSTEM</h2>
                 <h6>Ett bokningssystem för delade arbetsytor. En effektivare och smidigare arbetsplats.</h6>
-                <a href="booking.html" class="read-more-btn"><span>Läs Nu</span></a>
+                <a href="booking.html" class="read-more-btn"><span>Upptäck mer</span></a>
             </div>
         </section>
 
@@ -55,7 +55,7 @@
             <div class="project-content">
                 <h2>TAHULET ED TARHA</h2>
                 <h6>Kärlek till Azawakh världen över</h6>
-                <a href="#" class="read-more-btn"><span>Läs Nu</span></a>
+                <a href="#" class="read-more-btn"><span>Upptäck mer</span></a>
             </div>
         </section>
     </main>
