--- a/booking.html
+++ b/booking.html
@@ -55,7 +55,7 @@
             </div>
         </div>
 
-        <div class="image2">
+        <div class="image2 two">
             <img src="/IMG/STWKBOOKING7.jpg" alt="">
         </div>
 
